--- a/src/styles/Work.css
+++ b/src/styles/Work.css
@@ -96,3 +96,31 @@
     opacity: 100%;
   }
 }
+@media only screen and (max-width: 992px) {
+  .work {
+    padding: 2rem;
+  }
+  .work-section .work-h1 {
+    font-size: 2.5rem;
+  }
+  .wrap {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .main-content {
+    width: 100%;
+  }
+  .main-content:nth-child(2) {
+    width: 100%;
+  }
+  .main-content:nth-child(3) {
+    width: 100%;
+  }
+  .main-content:nth-child(4) {
+    width: 100%;
+  }
+  .cover-wrapper:hover {
+    height: 100%;
+    opacity: 100%;
+  }
+}
