--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -94,3 +94,25 @@ video {
     z-index: -1;
   }
 }
+@media only screen and (min-width: 431px) {
+  .main_text .landing_h1 {
+    font-size: 3rem;
+    padding-top: 0.5rem;
+  }
+  .main_text {
+    height: 30vh;
+    margin: 1rem;
+  }
+  .video {
+    width: 85%;
+    height: 70%;
+  }
+  video {
+    width: 100%;
+    border-radius: 7px;
+    margin: 0;
+  }
+  .landing {
+    margin-top: 5rem;
+  }
+}
